--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,10 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "prettier"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "extends": "next/core-web-vitals",
   "rules": {
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-explicit-any": "warn",
-    "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/explicit-module-boundary-types": "off",
-    "no-console": "warn"
+    "react/no-unescaped-entities": "warn",
+    "@next/next/no-img-element": "warn",
+    "@typescript-eslint/no-namespace": "warn"
   }
 } 
